--- a/package.json
+++ b/package.json
@@ -2,14 +2,22 @@
   "name": "backendproject",
   "version": "1.0.0",
   "description": "backend Project",
-  "main": "index.js",
+  "type": "module",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "javascript",
     "backend"
   ],
   "author": "janhavi bandhane",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "mongoose": "^8.16.0"
+  }
 }
