--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "janhavi bandhane",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
