--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
+    "socket.io": "^4.8.1",
     "ws": "^8.18.3"
   }
 }
